# sparkle_convenience

./: .gitignore  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
src/: error.rs  http.rs  interaction.rs  lib.rs  log.rs  message.rs  prettify.rs  reply.rs  util.rs  webhook.rs
src/error/: conversion.rs  extract.rs  http_error.rs  tests.rs
src/http/: message.rs
src/interaction/: extract.rs  tests.rs
src/message/: delete_after.rs
src/message/delete_after/: tests.rs
