[package]
name = "sparkle-convenience"
version = "0.15.8-rc.1"
authors = ["lara <laralove143@icloud.com>"]
edition = "2021"
description = "A wrapper over Twilight designed to make it more convenient to use"
repository = "https://github.com/laralove143/sparkle-convenience/"
license = "ISC"
keywords = ["discord", "discord-api", "twilight"]
categories = ["api-bindings", "asynchronous", "caching"]

[dependencies]
twilight-gateway = { version = "0.15", default-features = false, features = ["twilight-http"] }
twilight-http = { version = "0.15", default-features = false }
twilight-model = "0.15"
twilight-validate = "0.15"
titlecase = "2.2"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
